Upgrade asm and add support for Java 15 records.