@@ -49,6 +49,8 @@
 							<sources>
 								<source>src/main/java7</source>
 								<source>src/main/java8</source>
+								<source>src/main/java11</source>
+								<source>src/main/java15</source>
 							</sources>
 						</configuration>
 					</execution>
@@ -59,7 +61,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<!-- the highest java version for which we have tests -->
-					<release>11</release>
+					<release>15</release>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -74,6 +77,7 @@
 						<phase>compile</phase>
 						<configuration>
 							<target>
+								<!-- only LTS versions and latest Java version are tested here -->
 								<mkdir dir="target/classes_java7"/>
 								<javac destdir="target/classes_java7" release="7" debug="true" includeantruntime="false">
 									<src path="src/main/java7"/>
@@ -83,6 +87,23 @@
 									<src path="src/main/java7"/>
 									<src path="src/main/java8"/>
 								</javac>
+								<mkdir dir="target/classes_java11"/>
+								<javac destdir="target/classes_java11" release="11" debug="true" includeantruntime="false">
+									<src path="src/main/java7"/>
+									<src path="src/main/java8"/>
+									<src path="src/main/java11"/>
+								</javac>
+								<!--
+								no way to enable-preview using javac ant task, so need to wait till records and sealed are standard
+								for example in java 17, and then rename this to java17 and stop using/testing preview features
+								<mkdir dir="target/classes_java15"/>
+								<javac destdir="target/classes_java15" release="15" debug="true" includeantruntime="false">
+									<src path="src/main/java7"/>
+									<src path="src/main/java8"/>
+									<src path="src/main/java11"/>
+									<src path="src/main/java15"/>
+								</javac>
+								-->
 							</target>
 						</configuration>
 					</execution>
@@ -92,6 +113,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
+					<argLine>--enable-preview</argLine>
 					<includes>
 						<include>**/*Test.java</include>
 						<include>**/*TestSuite.java</include>
